--- a/templates/materializecssform/field.html
+++ b/templates/materializecssform/field.html
@@ -127,13 +127,16 @@
         </div>
 
     {% elif field|is_file %}
-        <div class="col {{ classes.label }}">
-            <p>
+        <div class="file-field input-field col {{ classes.label }}">
+            <div class="btn">
             {% if field.auto_id %}
-                <label class="{{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label><br>
+                <span>{{ field.label }}</span><br>
             {% endif %}
             {{ field }}
-            </p>
+            </div>
+	    <div class="file-path-wrapper">
+		    <input class="file-path validate" type="text" placeholder="Select file to upload">
+	    </div>
 
             {% for error in field.errors %}
                 <p class="help-block orange-text {{ form.error_css_class }}">{{ error }}</p>
